Hint modal: added invisible scrollbar and fixed close icon.

--- a/app/src/Components/Project/Toolbar/ToolbarRightHint/ToolbarRightHint.component.scss
+++ b/app/src/Components/Project/Toolbar/ToolbarRightHint/ToolbarRightHint.component.scss
@@ -1,7 +1,6 @@
 @import "../../../../../assets/theme/variables";
 
 .hintModal {
-  overflow-y: auto;
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.50);
   position: fixed;
   width: 560px;
@@ -11,64 +10,73 @@
   transform: translateX(560px);
   transition: transform 0.3s ease-in;
   padding: 24px;
-  .close-btn {
-    text-align: right;
-    padding-right: 8px;
-    margin-bottom: 24px;
-    i {
-      font-size: 16px;
-      color: $gray;
-      cursor: pointer;
-      &:hover {
-        color: $primary;
-      }
-    }
+  .hintModal-header {
+	.close-btn {
+	  position: fixed;
+	  right: 4px;
+	  i {
+		font-size: 16px;
+		color: $gray;
+		cursor: pointer;
+		&:hover {
+		  color: $primary;
+		}
+	  }
+	}
   }
+  .hintModal-body {
+	height: 800px;
+	margin-top: 24px;
+	overflow-y: auto;
+	&::-webkit-scrollbar {
+	  display: none;
+	}
 
-  h1 {
-    font-size: 24px;
-    color: $headerBlack;
-    margin: 0px;
-  }
+	h1 {
+	  font-size: 24px;
+	  color: $headerBlack;
+	  margin: 0px;
+	}
 
-  .shortCutRow {
-    padding: 24px 0 16px;
-    border-bottom: 1px solid $headerBlack;
-    &:nth-last-child(1) {
-      border-bottom: none;
-      margin-bottom: 24px;
-    }
+	.shortCutRow {
+	  padding: 24px 0 16px;
+	  border-bottom: 1px solid $headerBlack;
+	  &:nth-last-child(1) {
+		border-bottom: none;
+		margin-bottom: 24px;
+	  }
 
-    h4 {
-      color: $gray;
-      margin-bottom: 8px;
-      font-size: 16px;
-    }
+	  h4 {
+		color: $gray;
+		margin-bottom: 8px;
+		font-size: 16px;
+	  }
 
-    ul {
-      padding: 0;
-      list-style-type: none;
-      margin: 0px;
-      li {
-        font-size: 12px;
-        margin-bottom: 4px;
-      }
-      .last {
-        display: grid;
-        grid-template-columns: 4.2fr 0.5fr 0.3fr;
-        margin-bottom: 8px;
-        span {
-          text-align: center;
-          padding: 4px;
-          background-color: $lightGrey;
-          color: $primary;
-          border-radius: 2px;
-          &:nth-child(1) {
-            margin-right: 2px;
-          }
-        }
-      }
-    }
+	  ul {
+		padding: 0;
+		list-style-type: none;
+		margin: 0px;
+		li {
+		  font-size: 12px;
+		  margin-bottom: 4px;
+		}
+		.last {
+		  display: grid;
+		  grid-template-columns: 4.2fr 0.5fr 0.3fr;
+		  margin-bottom: 8px;
+		  span {
+			text-align: center;
+			padding: 4px;
+			background-color: $lightGrey;
+			color: $primary;
+			border-radius: 2px;
+			&:nth-child(1) {
+			  margin-right: 2px;
+			}
+		  }
+		}
+	  }
+	}
   }
 }
 
